created necessary service interface. Project ready to implement business logic

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ fabric.properties
 
 /.idea/encodings.xml
 /.idea/uiDesigner.xml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/dataSources.xml
