--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot-version>3.1.0</spring-boot-version>
+        <specification-arg-resolver-version>3.0.0</specification-arg-resolver-version>
     </properties>
 
 
@@ -60,6 +61,12 @@
             <artifactId>lombok-mapstruct-binding</artifactId>
             <version>0.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.kaczmarzyk</groupId>
+            <artifactId>specification-arg-resolver</artifactId>
+            <version>${specification-arg-resolver-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
