--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot-version>3.1.0</spring-boot-version>
         <specification-arg-resolver-version>3.0.0</specification-arg-resolver-version>
+        <liquibase-version>4.20.0</liquibase-version>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -66,7 +66,48 @@
             <artifactId>specification-arg-resolver</artifactId>
             <version>${specification-arg-resolver-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase-version}</version>
+        </dependency>
 
     </dependencies>
+
+    <build>
+
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.17.2</version>
+                <configuration>
+                    <url>jdbc:postgresql://localhost:5432/total_account</url>
+                    <username>postgres</username>
+                    <password>123</password>
+                    <outputChangeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\initial_changelog.sql</outputChangeLogFile>
+                    <referenceUrl>jdbc:postgresql://localhost:5432/total_account_dup</referenceUrl>
+                    <referenceUsername>postgres</referenceUsername>
+                    <referencePassword>123</referencePassword>
+<!--                    <changeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\diff_changelog.sql</changeLogFile>-->
+<!--                    <diffChangeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\diff_changelog.sql</diffChangeLogFile>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
