--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -5,10 +5,13 @@ spring:
     password: 123
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     properties:
       hibernate:
       dialect: org.hibernate.dialect.PostgreSQL81Dialect
+  liquibase:
+    enabled: false
+    change-log: classpath:config/liquibase/master.xml
 server:
   port: 8080
 
