--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -5,7 +5,7 @@ spring:
     password: 123
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
       dialect: org.hibernate.dialect.PostgreSQL81Dialect
