docker compose configured

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot-version>3.1.0</spring-boot-version>
+        <spring-boot-version>3.1.1</spring-boot-version>
         <specification-arg-resolver-version>3.0.0</specification-arg-resolver-version>
         <liquibase-version>4.20.0</liquibase-version>
     </properties>
@@ -88,11 +88,35 @@
             <version>2.0.2</version>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-docker-compose</artifactId>-->
+        <!--            <version>${spring-boot-version}</version>-->
+        <!--        </dependency>-->
+
     </dependencies>
 
     <build>
 
+        <finalName>
+            total-account
+        </finalName>
         <plugins>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>uz.xbakhromjon.ApplicationRunner</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -114,12 +138,14 @@
                     <url>jdbc:postgresql://localhost:5432/total_account</url>
                     <username>postgres</username>
                     <password>123</password>
-                    <outputChangeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\initial_changelog.sql</outputChangeLogFile>
+                    <outputChangeLogFile>
+                        C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\initial_changelog.sql
+                    </outputChangeLogFile>
                     <referenceUrl>jdbc:postgresql://localhost:5432/total_account_dup</referenceUrl>
                     <referenceUsername>postgres</referenceUsername>
                     <referencePassword>123</referencePassword>
-<!--                    <changeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\diff_changelog.sql</changeLogFile>-->
-<!--                    <diffChangeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\diff_changelog.sql</diffChangeLogFile>-->
+                    <!--                    <changeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\diff_changelog.sql</changeLogFile>-->
+                    <!--                    <diffChangeLogFile>C:\Users\Bakhromjon\IdeaProjects\total_account_app\src\main\resources\config\liquibase\changelog\diff_changelog.sql</diffChangeLogFile>-->
                 </configuration>
             </plugin>
         </plugins>
